--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.1.5",
+    "cache-manager": "^3.6.0",
+    "eslint": "^8.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.3",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.0.0"
+    "rxjs": "^7.0.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -27,6 +36,7 @@
     "@babel/register": "^7.8.6",
     "@babel/runtime": "^7.8.7",
     "@nestjs/testing": "^7.0.1",
+    "@types/cache-manager": "^3.4.2",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
